<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context="com.example.ashostak89.shoppinglist.MyAlertDialog"
    android:gravity="right">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etfirstname"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:hint="@string/user_first_name"
        android:gravity="right" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etlastname"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:hint="@string/user_last_name"
        android:gravity="right" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etphonenumber"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:inputType="phone"
        android:hint="@string/user_number"
        android:gravity="right" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etemail"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:inputType="textEmailAddress"
        android:hint="@string/user_email"
        android:gravity="right" />


</LinearLayout>
