<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    android:stretchColumns="0"
    android:shrinkColumns="1"
    android:id="@+id/tablelayout" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tobuy"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:textColor="@color/text_logo_color"
        android:gravity="center" />

    <TableRow
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:background="@color/color_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/username"
            android:id="@+id/textView8"
            android:layout_span="1"
            android:textColor="@color/color_white"/>
    </TableRow>

    <TableRow
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <EditText
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:background="@color/color_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email"
            android:id="@+id/textView9"
            android:layout_span="1"
            android:textColor="@color/color_white"/>
    </TableRow>

    <TableRow
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="8">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/editText3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/color_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_free_text"
            android:id="@+id/textView10"
            android:layout_span="2"
            android:textColor="@color/color_white"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:text="שלח"
            android:id="@+id/btnsand"
            android:layout_column="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            />
    </TableRow>
</TableLayout>
